monitoring/promateus/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-stack-grafana
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: gr.12w.ir # Replace with your actual domain name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-stack-grafana
            port:
              number: 80 # This matches the Service port, not the container port 3000
