monitoring/promateus/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring 
spec:
  parentRefs:
    - name: core-gateway
      namespace: default
  hostnames:
    - "gr.12w.ir" 
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prometheus-stack-grafana 
          port: 80
